--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
         <artifactId>commons-collections</artifactId>
         <version>3.2.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-server</artifactId>
+        <version>9.3.6.v20151106</version>
+    </dependency>
 </dependencies>
 
 <build>
@@ -67,13 +72,14 @@
             </configuration>
         </plugin>
 
-        <!--
         <plugin>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>9.3.0.v20150612</version>
-        </plugin>
-        -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+    </plugin>
     </plugins>
 </build>
 </project>
