--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,27 @@
 <modelVersion>4.0.0</modelVersion>
 <groupId>com.vizor</groupId>
 <artifactId>vision-server</artifactId>
-<version>1.0-SNAPSHOT</version>
+<version>1.0</version>
 <packaging>jar</packaging>
 <name>Vision Server</name>
 
 <properties>
-    <jettyVersion>9.0.2.v20130417</jettyVersion>
+    <jettyVersion>9.3.9.v20160517</jettyVersion>
 </properties>
 
 <dependencies>
     <!-- Jetty -->
     <dependency>
         <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-util</artifactId>
+        <version>${jettyVersion}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-server</artifactId>
         <version>${jettyVersion}</version>
+        <optional>true</optional>
     </dependency>
 
     <!-- http://mvnrepository.com/artifact/com.google.guava/guava -->
@@ -54,12 +61,37 @@
     <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-server</artifactId>
-        <version>9.3.6.v20151106</version>
+        <version>${jettyVersion}</version>
     </dependency>
 </dependencies>
 
 <build>
     <plugins>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+                <execution>
+                    <id>copy-dependencies</id>
+                    <phase>package</phase>
+                    <goals><goal>copy-dependencies</goal></goals>
+                </execution>
+            </executions>
+        </plugin>
+
+
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
@@ -73,13 +105,28 @@
         </plugin>
 
         <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-        </configuration>
-    </plugin>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>${jettyVersion}</version>
+        </plugin>
+
+
+        <plugin>
+            <!-- Build an executable JAR -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <classpathPrefix>lib/</classpathPrefix>
+                        <mainClass>com.vizor.visionserver.Main</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+
     </plugins>
 </build>
 </project>
