--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 <groupId>com.vizor</groupId>
 <artifactId>vision-server</artifactId>
 <version>1.0</version>
-<packaging>jar</packaging>
+<packaging>war</packaging>
 <name>Vision Server</name>
 
 <properties>
@@ -108,6 +108,15 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
             <version>${jettyVersion}</version>
+        </plugin>
+
+        <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <warSourceDirectory>WebContent</warSourceDirectory>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
         </plugin>
 
 
